--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!-- list -->
             <ul>
                 <li class="listitems"><a class="links" href="">HOME</a></li>
-                <li class="listitems"><a class="links" href="">ABOUT</a></li>
+                <li class="listitems"><a class="links" href="">ABOUT ME</a></li>
                 <li class="listitems"><a class="links" href="">SKILLS</a></li>
                 <li class="listitems"><a class="links" href="">CONTACT</a></li>
             </ul>
